# BoidsSimulatorMPI

./: .gitignore  CMakeLists.txt  Makefile  README.md  hostfile
job_scripts/: example.sh  example_mpi.sh  job_N10k_T1800.sh  job_N1k_T1800.sh  job_N50k_T1800.sh  test_mpi.sh
k_scripts/: gen_jobscript.py
k_scripts/jobscript_templates/: template.sh
settings/: example.ini  example_grid.ini  mototake_old.ini  no_motion.ini  one_body.ini  test.ini
settings/parameter_search_vel/: mototake_vconst0.001.ini  mototake_vconst0.002.ini  mototake_vconst0.003.ini  mototake_vconst0.004.ini  mototake_vmin0.000.ini  mototake_vmin0.0005.ini  mototake_vmin0.001.ini  mototake_vmin0.0015.ini  mototake_vmin0.0020.ini  mototake_vmin0.0025.ini  mototake_vmin0.0030.ini  mototake_vmin0.0035.ini  mototake_vmin0.0040.ini  mototake_vmin0.0045.ini  mototake_vmin0.0050.ini
settings/parameter_search_vel_2/: gen.py  vmin0.0000_vmax0.0010.ini  vmin0.0000_vmax0.0020.ini  vmin0.0000_vmax0.0030.ini  vmin0.0000_vmax0.0040.ini  vmin0.0010_vmax0.0020.ini  vmin0.0010_vmax0.0030.ini  vmin0.0010_vmax0.0040.ini  vmin0.0020_vmax0.0030.ini  vmin0.0020_vmax0.0040.ini  vmin0.0030_vmax0.0040.ini
settings/parameter_search_vel_3/: N16384.ini
src/: args.cpp  args.h  boid.cpp  boid.h  boid_simulation.cpp  boid_simulation.h  boid_simulation_grid.cpp  boid_simulation_mpi.cpp  boid_simulation_mpi.h  boid_simulation_mpi_nogrid.cpp  boid_simulation_multinode.cpp  boid_simulation_multinode.h  dtype.h  main.cpp  parameter.h  vector3D.cpp  vector3D.h
src/legacy/: boid.cpp  boid.h  main.cpp  parameter.h  vector3D.cpp
src_legacy/: parameter.h
test/: compare_grid.sh  compare_legacy.sh  compare_mpi.sh  compare_mpi_grid.sh  compare_mpi_parallel_output.sh  compare_mpi_split.sh  compare_split.sh  compare_split_mpi.sh  execution_time.sh
tools/: calc_distance.pyx  check_datafile.py  check_result.py  convert_newformat.py  display_metadata.py  fix_datafile.py  gen_jobscript.py  generate_initialization_file.py  merge_cluster_datafiles.py  merge_data.py  merge_datafiles.py  slice_data.py  split_datafile.py  swarm_data_manager.py  swarm_util.py  sync.sh  sync_data.sh  sync_src.sh  test.py
tools/jobscript_templates/: template_mpi.sh
